--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -32,10 +32,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.pubnub:pubnub-kotlin:5.0.2'
+    implementation files('jars/pubnub-kotlin-5.1.1-all-forcura.jar')
 
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
 //    implementation project(':pubnub')
 }
