--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -33,7 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation files('jars/pubnub-kotlin-5.1.1-all-forcura.jar')
-
-
-//    implementation project(':pubnub')
+    //implementation 'com.pubnub:pubnub-kotlin:5.1.1'
+    implementation 'com.google.dagger:dagger:2.32'
+    kapt 'com.google.dagger:dagger-compiler:2.32'
 }
